--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: 11
+          distribution: 'corretto'
       - name: Build with Gradle
         run: ./gradlew build
       - name: Run tests with Gradle
