--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,12 +31,12 @@ jobs:
       - name: Retrieve Version
         run: |
           echo "version_name=${{steps.android_version.outputs.VERSION_NAME}}" >> $GITHUB_ENV
+      - run: echo ${{ env.version_name }}
       - name: Create new release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: ncipollo/release-action@v1
         with:
-          tag_name: ${{ env.version_name }}
-          release_name: Release ${{ env.version_name }}
-          draft: true
-          prerelease: false
+            token: ${{ secrets.GITHUB_TOKEN }}
+            tag: ${{ env.version_name }}
+            release_name: Release ${{ env.version_name }}
+            draft: true
+            prerelease: false
