--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -38,12 +38,7 @@ jobs:
       - name: Commit and push the badge (if it changed)
         uses: EndBug/add-and-commit@v7
         with:
+          branch: badge
           default_author: github_actions
           message: 'commit badge'
           add: '*.svg'
-
-      - name: Upload JaCoCo coverage report
-        uses: actions/upload-artifact@v2
-        with:
-          name: jacoco-report
-          path: target/site/jacoco/
