--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,9 +37,9 @@ jobs:
         with:
           java-version: 11
           distribution: 'corretto'
-      - name: Edit version
+      - name: Edit version in build.gradle.kts
         run: |
-            sed -i "s/version = '.*'/version = '$(echo ${{ github.event.inputs.version }})'/" build.gradle.kts
+            sed -i "s/version = ".*"/version = \"${{ github.event.inputs.version }}\"/g" build.gradle.kts
       - name: Log build.gradle.kts
         run: |
             cat build.gradle.kts
