--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Commit version change
         run: |
           git config user.email "rabid-rider-bot@users.noreply.github.com" |
-          git config user.name "rabid-rider-bot"
+          git config user.name "rabid-rider-bot" |
           git commit -am "Bump version to ${{ github.event.inputs.version }}"
       - name: Push changes
         uses: ad-m/github-push-action@master
