--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,12 +47,11 @@ jobs:
         run: |
           git config --local user.name "rabid-rider-bot" |
           git config --local user.email "155632846+rabid-rider-bot@users.noreply.github.com" |
-          gti config --local user.password "${{ secrets.BOT_TOKEN }}" |
           git commit -am "Bump version to ${{ github.event.inputs.version }}"
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.BOT_TOKEN }}
           branch: ${{ github.ref }}
       - run: chmod +x gradlew
       - name: Build with Gradle
