--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -36,9 +36,9 @@ jobs:
           echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
 
       - name: Commit and push the badge (if it changed)
-        uses: EndBug/add-and-commit@v7
-        with:
-          branch: badge
-          default_author: github_actions
-          message: 'commit badge'
-          add: '*.svg'
+        uses: s0/git-publish-subdir-action@develop
+        env:
+          REPO: self
+          BRANCH: badges
+          FOLDER: .github/badges
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
