--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -41,4 +41,4 @@ jobs:
           REPO: self
           BRANCH: badges
           FOLDER: .github/badges
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
