Why does this thing hate me

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,13 +46,11 @@ jobs:
             sed -i "s/version = ".*"/version = \"${{ github.event.inputs.version }}\"/g" build.gradle.kts
       - name: Commit version change
         run: |
-          git config --global user.email "rabid-rider-bot@users.noreply.github.com" |
-          git config --global user.name "rabid-rider-bot" |
           git commit -am "Bump version to ${{ github.event.inputs.version }}"
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.BOT_TOKEN }}
           branch: ${{ github.ref }}
       - run: chmod +x gradlew
       - name: Build with Gradle
