--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -48,9 +48,10 @@ jobs:
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
-          committer_name: GitHub Actions
-          committer_email: 41898282+github-actions[bot]@users.noreply.github.com
+          committer_name: Rabid Rider Bot
+          committer_email: 155632846+rabid-rider-bot@users.noreply.github.com
           message: "Bump version to ${{ github.event.inputs.version }}"
+          default_author: user_info
           add: 'build.gradle.kts'
       - name: Push changes
         uses: ad-m/github-push-action@master
