--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,7 +43,8 @@ jobs:
           distribution: 'corretto'
       - name: Edit version in build.gradle.kts
         run: |
-            sed -i "s/version = ".*"/version = \"${{ github.event.inputs.version }}\"/g" build.gradle.kts
+            sed -i "s/version = ".*"/version = \"${{ github.event.inputs.version }}\"/g" build.gradle.kts |
+            sed -i "s/com.github.mmathijs:rabid-rider:.*'/com.github.mmathijs:rabid-rider:${{ github.event.inputs.version }}'/g" readme.md
 
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
